Fixes portfolio div collapse/expand bug by binding click event to the portfolio h2, rather than the entire div Adds high-level technologies used in each project, increases margin between projects for easier viewing

--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -14,7 +14,7 @@ div.divider {
 .full-width-project {
   width: 95%;
   background: #FFF;
-  margin: 1em auto;
+  margin: 60px auto;
 }
 
 .left-project, .right-project {
